--- a/style.css
+++ b/style.css
@@ -1,5 +1,18 @@
-h1 {
+* {
   background-color: darkgrey;
-  color: orange;
+}
+
+.top {
+  display: block;
+  background: url('logo.png') no-repeat center;
+  height: 300px;
+  width: 100%;
+  text-align: center;
+  overflow: hidden;
+}
+h1 {
+  font-size: 30px;
   font-family: fantasy;
+  color: white;
+  padding-top: 30px;
 }
