--- a/style.css
+++ b/style.css
@@ -1,7 +1,6 @@
 * {
   background-color: darkgrey;
 }
-
 .top {
   display: block;
   background: url('logo.png') no-repeat center;
@@ -14,5 +13,24 @@ h1 {
   font-size: 30px;
   font-family: fantasy;
   color: white;
-  padding-top: 30px;
+  padding-top: 100px;
+  background-color: inherit;
+}
+nav {
+  display: block;
+  background-color: inherit;
+  text-align: center;
+  margin: 50px;
+}
+a {
+  display: inline-block;
+  margin: 5px;
+  border: 3px solid white;
+  border-radius: 25px;
+  padding: 5px 20px;
+  color: white;
+  font-family: sans-serif;
+}
+a:hover {
+  background-color: #B05917;
 }
