--- a/style.css
+++ b/style.css
@@ -19,8 +19,8 @@ h1 {
 nav {
   display: block;
   background-color: inherit;
-  text-align: center;
-  margin: 50px;
+  margin: 50px auto;
+  max-width: 500px;
 }
 a {
   display: inline-block;
