--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 * {
   background-color: darkgrey;
 }
-.top {
+header {
   display: block;
   background: url('logo.png') no-repeat center;
   height: 300px;
@@ -13,6 +13,7 @@ h1 {
   font-size: 30px;
   font-family: fantasy;
   color: white;
+  text-shadow: 3px 1px 2px black, 0 0 25px #B05917, 0 0 5px #B05917;
   padding-top: 100px;
   background-color: inherit;
 }
@@ -25,7 +26,7 @@ nav {
 a {
   display: inline-block;
   margin: 5px;
-  border: 3px solid white;
+  border: 1px solid white;
   border-radius: 25px;
   padding: 5px 20px;
   color: white;
@@ -33,4 +34,18 @@ a {
 }
 a:hover {
   background-color: #B05917;
+}
+
+
+main {
+  display: flex;
+  margin-top: 30px;
+  padding:20px;
+}
+#quote {
+  width: 100%;
+  max-width: 400px;
+  max-height: 400px;
+  border-radius: 20px;
+  box-shadow: 0px 0px 50px rgba(0, 0, 0, 0.60);
 }
