--- a/style.css
+++ b/style.css
@@ -1,51 +1,9 @@
-* {
-  background-color: darkgrey;
-}
-header {
-  display: block;
-  background: url('logo.png') no-repeat center;
-  height: 300px;
+#top {
+  background-image: url('logo.png');
+  background-repeat: no-repeat;
+  background-size: contain;
+  background-position: bottom;
+  padding-top: 10px;
+  padding-bottom: 75px;
   width: 100%;
-  text-align: center;
-  overflow: hidden;
-}
-h1 {
-  font-size: 30px;
-  font-family: fantasy;
-  color: white;
-  text-shadow: 3px 1px 2px black, 0 0 25px #B05917, 0 0 5px #B05917;
-  padding-top: 100px;
-  background-color: inherit;
-}
-nav {
-  display: block;
-  background-color: inherit;
-  margin: 50px auto;
-  max-width: 500px;
-}
-a {
-  display: inline-block;
-  margin: 5px;
-  border: 1px solid white;
-  border-radius: 25px;
-  padding: 5px 20px;
-  color: white;
-  font-family: sans-serif;
-}
-a:hover {
-  background-color: #B05917;
-}
-
-
-main {
-  display: flex;
-  margin-top: 30px;
-  padding:20px;
-}
-#quote {
-  width: 100%;
-  max-width: 400px;
-  max-height: 400px;
-  border-radius: 20px;
-  box-shadow: 0px 0px 50px rgba(0, 0, 0, 0.60);
 }
