--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 #top {
-  background-image: url('logo.png');
+  background-image: url('imgs/logo.png');
   background-repeat: no-repeat;
   background-size: contain;
   background-position: bottom;
