--- a/upcomingevents/style.css
+++ b/upcomingevents/style.css
@@ -8,3 +8,24 @@
   width: 100%;
   max-width: 900px;
 }
+
+.img-fluid {
+  max-width: 450px;
+  height: 600px;
+}
+.synopsis {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  color: white;
+  text-align: center;
+}
+
+a {
+  color: green;
+}
+
+a:hover {
+  color: grey;
+}
