--- a/style.css
+++ b/style.css
@@ -11,7 +11,7 @@
 }
 
 .parallax {
-  background-image: url("imgs/theatrebg.jpg");
+  background-image: url("imgs/monday.jpg");
   height: 1000px;
   background-attachment: fixed;
   background-position: center;
@@ -27,7 +27,7 @@
  }
 
 #quote {
-  padding-top: 400px;
+  padding-top: 100px;
 }
 
 footer {
