--- a/style.css
+++ b/style.css
@@ -11,7 +11,7 @@
 }
 
 .parallax {
-  background-image: url("imgs/monday.jpg");
+  background-image: url("imgs/monday.JPG");
   height: 1000px;
   background-attachment: fixed;
   background-position: center;
