--- a/oap/style.css
+++ b/oap/style.css
@@ -8,10 +8,26 @@
   width: 100%;
   max-width: 900px;
 }
+.main {
+  background-image: url('../imgs/llcast.jpg');
+  opacity: 0.8;
+  background-size: cover;
+  height: 400px;
+  display: flex;
+  text-align: center;
+  justify-content: center;
+  margin-bottom: 50px;
+}
 
-.img-fluid {
-  max-width: 450px;
-  height: 600px;
+.img-fluid2 {
+
+  max-width: 600px;
+  height: 370px;
+}
+
+.award {
+  max-width: 300px;
+  height: 270px;
 }
 .synopsis {
   display: flex;
@@ -20,6 +36,7 @@
   flex-direction: column;
   color: white;
   text-align: center;
+  padding-bottom: 30px;
 }
 
 a {
