--- a/ThespianTroupe/style.css
+++ b/ThespianTroupe/style.css
@@ -40,7 +40,8 @@ h1{
   justify-content: center;
 }
 
-footer{
-  margin-top: 150px;
-  padding-left: 325px;
+footer {
+  text-align: center;
+  color: white;
+  margin: 30px;
 }
