--- a/links/css/style.css
+++ b/links/css/style.css
@@ -18,11 +18,10 @@ h3 {
   padding-top: .8;
   margin: 0;
   font-size: 2.5em;
-  color: slategrey;
+  color: white;
 }
 
 html {
-  background-color: lightgrey;
   display: flex;
   font-family: "Lato", sans-serif;
   justify-content: center;
@@ -32,6 +31,7 @@ header {
   color: lightgrey;
   font-size: 20px;
   text-align: center;
+  margin: 50px;
 }
 
 a:hover {
