--- a/links/css/style.css
+++ b/links/css/style.css
@@ -82,7 +82,11 @@ footer p {
 }
 
 footer {
-  color: silver;
+  border-top: 1px solid grey;
+  padding-top: 20px;
+  text-align: center;
+  color: white;
+  margin: 30px;
 }
 
 @media (max-width: 600px) {
