--- a/oap/style.css
+++ b/oap/style.css
@@ -14,8 +14,7 @@
   background-size: cover;
   height: 400px;
   display: flex;
-  text-align: center;
-  justify-content: center;
+  background-position: 50% 25%;
   margin-bottom: 50px;
 }
 
@@ -48,6 +47,8 @@ a:hover {
 }
 
 footer {
+  border-top: 1px solid grey;
+  padding-top: 20px;
   text-align: center;
   color: white;
   margin: 30px;
