--- a/oap/style.css
+++ b/oap/style.css
@@ -8,7 +8,7 @@
   width: 100%;
   max-width: 900px;
 }
-.main {
+main {
   background-image: url('../imgs/llcast.jpg');
   opacity: 0.8;
   background-size: cover;
@@ -28,6 +28,7 @@
 .award {
   max-width: 300px;
   height: 270px;
+  margin: 30px;
 }
 .synopsis {
   display: flex;
