--- a/upcomingevents/style.css
+++ b/upcomingevents/style.css
@@ -9,9 +9,10 @@
   max-width: 900px;
 }
 
-.img-fluid {
+.poster {
   max-width: 450px;
-  height: 600px;
+  height: 500px;
+  margin: 30px;
 }
 .synopsis {
   display: flex;
