--- a/about/style.css
+++ b/about/style.css
@@ -5,6 +5,7 @@
   background-position: bottom;
   padding-top: 10px;
   padding-bottom: 75px;
+  padding-left: 95px;
   width: 100%;
   max-width: 900px;
   margin-bottom: 20px;
